name:                ascii-horizontal-barchart
version:             0.1.0.0
description:         Please see README.md
homepage:            https://github.com/lotz84/ascii-horizontal-barchart#readme
license:             BSD3
license-file:        LICENSE
author:              Tatsuya Hirose
maintainer:          tatsuya.hirose.0804@gmail.com
copyright:           2016 Tatsuya Hirose
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.Chart
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable app
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ascii-horizontal-barchart
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lotz84/ascii-horizontal-barchart
